infrastructure/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: clud
spec:
  type: NodePort
  ports:
  - name: postgres
    port: 5432
    nodePort: 30432
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: clud
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.12
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
        ports:
        - containerPort: 5432
  volumeClaimTemplates:
  - metadata:
      name: postgredb
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 100Mi
